# rust-learnings

./: READMe.md
00-helloworld/src/: lib.rs  main.rs
01-guessing_game/src/: main.rs
02-school-mgt-system/: Cargo.toml
02-school-mgt-system/src/: main.rs
03-todo_app/src/: main.rs
04-ass-1/: Cargo.toml
04-ass-1/src/: main.rs
05-expense-tracker/: Cargo.toml  README.md
05-expense-tracker/src/: main.rs
05-expense-tracker/src/expense_lib/: commands_disp.rs  expense.rs  mod.rs
07-grep-tool-chapt-12/: output.txt
07-grep-tool-chapt-12/src/: lib.rs  main.rs
08-axum-blog-api/: Assignment.md  Cargo.toml  README.md
08-axum-blog-api/migrations/: 20260222234823_first-migrations.sql
08-axum-blog-api/src/: config.rs  error.rs  main.rs
08-axum-blog-api/src/app/: mod.rs  router.rs  state.rs
08-axum-blog-api/src/author/: handlers.rs  mod.rs  models.rs  queries.rs
08-axum-blog-api/src/post/: handlers.rs  mod.rs  models.rs  queries.rs
09-axum-learn/: Cargo.toml
09-axum-learn/src/: main.rs
10-cargo-crates-deployment/: Cargo.toml  README.md
10-cargo-crates-deployment/src/: lib.rs
10-cargo-crates-deployment/tests/: math_tests.rs
11-cargo-workspaces/add_one/src/: lib.rs
12-smart-pointers/src/: main.rs
13-sqlx-session-auth/: Cargo.toml  db.sqlite
13-sqlx-session-auth/src/: main.rs
14- websockets/: Cargo.toml
14- websockets/src/: main.rs
15-simple-apis/: Cargo.toml
15-simple-apis/src/: main.rs
16-sqlx-rest-apis/: Cargo.toml  test.db
16-sqlx-rest-apis/src/: main.rs
17-websocket-chat-app/server/: Cargo.toml
17-websocket-chat-app/server/src/: main.rs
jwt-live-session-1/: Cargo.toml
jwt-live-session-1/src/: main.rs
leptos-tutorial/: Cargo.toml
leptos-tutorial/src/: main.rs
