[package]
name = "sqlx-rest-apis"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
axum = { version = "0.8.1", features = ["ws"] }
futures-util = "0.3"
sqlx = { version="0.8.3", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
